# online-cinema

./: .env.sample  Dockerfile  README.md  alembic.ini  docker-compose-local.yml  init.sql  pyproject.toml
commands/: run_migration.sh  run_web_server_dev.sh
docker/tests/: Dockerfile
src/: main.py
src/config/: dependencies.py  settings.py
src/database/: __init__.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0461faa420ba_create_account_related_tables.py  325ec6e12d96_create_movie_related_tables.py
src/database/models/: accounts.py  movies.py
src/exceptions/: __init__.py  email.py  security.py
src/notifications/templates/: activation_complete.html  activation_request.html
src/routes/: __init__.py  accounts.py  movies.py  profiles.py
src/schemas/: accounts.py  movies.py  profiles.py
src/schemas/examples/: movies.py
src/security/: http.py  token_manager.py
src/storages/: s3.py
src/tests/: conftest.py
src/tests/test_integration/: test_accounts.py  test_movies.py  test_profiles.py
src/validation/: profile.py
