[project]
name = "online-cinema"
version = "0.1.0"
description = ""
authors = [
    {name = "Misha Goryn",email = "mgoryn68@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aioboto3 (>=15.0.0,<16.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
